@@ -2,6 +2,8 @@
 
 	* src/configure, src/aclocal.m4, src/Makefile.in: Add exmpp detection.
 
+	* src/ejabberd_receiver.erl: Enable the new #xmlel record.
+
 2008-06-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/ejabberd_receiver.erl: Replace the use of xml_stream by
